fix ^^ text align

--- a/static/src/main2.css
+++ b/static/src/main2.css
@@ -47,5 +47,5 @@ table tr {
 
 th, td {
     padding-right: 20px;
-    float: left;
+    text-align: left;
 }
